1.5/ingress_external_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc-external
spec:
  ports:
    - name: ingress
      port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    name: nginx-ingress-microk8s
