1.5/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - name: multitool-http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: backend
